K8S/usuarios-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: usuarios-pod
  labels:
    app: microservicio-usuarios
spec:
  containers:
  - name: usuarios-container
    image: jossie/microservicioopiniones:latest
    ports:
    - containerPort: 5201
