K8S/usuario-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-clusterip-archivo
spec:
  type: ClusterIP
  selector:
    app: microservicio-usuarios
  ports:
  - port: 5050
    targetPort: 5201
