K8S/usuarios-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-balancer-archivo
spec:
  type: LoadBalancer
  selector:
    app: microservicio-usuarios
  ports:
  - port: 5050
    targetPort: 5201
